Package_Tools/include_C/SDL_gamepad.h


typedef struct SDL_Gamepad SDL_Gamepad;
typedef enum SDL_GamepadType
{
    SDL_GAMEPAD_TYPE_UNKNOWN = 0,
    SDL_GAMEPAD_TYPE_STANDARD,
    SDL_GAMEPAD_TYPE_XBOX360,
    SDL_GAMEPAD_TYPE_XBOXONE,
    SDL_GAMEPAD_TYPE_PS3,
    SDL_GAMEPAD_TYPE_PS4,
    SDL_GAMEPAD_TYPE_PS5,
    SDL_GAMEPAD_TYPE_NINTENDO_SWITCH_PRO,
    SDL_GAMEPAD_TYPE_NINTENDO_SWITCH_JOYCON_LEFT,
    SDL_GAMEPAD_TYPE_NINTENDO_SWITCH_JOYCON_RIGHT,
    SDL_GAMEPAD_TYPE_NINTENDO_SWITCH_JOYCON_PAIR,
    SDL_GAMEPAD_TYPE_COUNT
} SDL_GamepadType;
typedef enum SDL_GamepadButton
{
    SDL_GAMEPAD_BUTTON_INVALID = -1,
    SDL_GAMEPAD_BUTTON_SOUTH,           
    SDL_GAMEPAD_BUTTON_EAST,            
    SDL_GAMEPAD_BUTTON_WEST,            
    SDL_GAMEPAD_BUTTON_NORTH,           
    SDL_GAMEPAD_BUTTON_BACK,
    SDL_GAMEPAD_BUTTON_GUIDE,
    SDL_GAMEPAD_BUTTON_START,
    SDL_GAMEPAD_BUTTON_LEFT_STICK,
    SDL_GAMEPAD_BUTTON_RIGHT_STICK,
    SDL_GAMEPAD_BUTTON_LEFT_SHOULDER,
    SDL_GAMEPAD_BUTTON_RIGHT_SHOULDER,
    SDL_GAMEPAD_BUTTON_DPAD_UP,
    SDL_GAMEPAD_BUTTON_DPAD_DOWN,
    SDL_GAMEPAD_BUTTON_DPAD_LEFT,
    SDL_GAMEPAD_BUTTON_DPAD_RIGHT,
    SDL_GAMEPAD_BUTTON_MISC1,           
    SDL_GAMEPAD_BUTTON_RIGHT_PADDLE1,   
    SDL_GAMEPAD_BUTTON_LEFT_PADDLE1,    
    SDL_GAMEPAD_BUTTON_RIGHT_PADDLE2,   
    SDL_GAMEPAD_BUTTON_LEFT_PADDLE2,    
    SDL_GAMEPAD_BUTTON_TOUCHPAD,        
    SDL_GAMEPAD_BUTTON_MISC2,           
    SDL_GAMEPAD_BUTTON_MISC3,           
    SDL_GAMEPAD_BUTTON_MISC4,           
    SDL_GAMEPAD_BUTTON_MISC5,           
    SDL_GAMEPAD_BUTTON_MISC6,           
    SDL_GAMEPAD_BUTTON_COUNT
} SDL_GamepadButton;
typedef enum SDL_GamepadButtonLabel
{
    SDL_GAMEPAD_BUTTON_LABEL_UNKNOWN,
    SDL_GAMEPAD_BUTTON_LABEL_A,
    SDL_GAMEPAD_BUTTON_LABEL_B,
    SDL_GAMEPAD_BUTTON_LABEL_X,
    SDL_GAMEPAD_BUTTON_LABEL_Y,
    SDL_GAMEPAD_BUTTON_LABEL_CROSS,
    SDL_GAMEPAD_BUTTON_LABEL_CIRCLE,
    SDL_GAMEPAD_BUTTON_LABEL_SQUARE,
    SDL_GAMEPAD_BUTTON_LABEL_TRIANGLE
} SDL_GamepadButtonLabel;
typedef enum SDL_GamepadAxis
{
    SDL_GAMEPAD_AXIS_INVALID = -1,
    SDL_GAMEPAD_AXIS_LEFTX,
    SDL_GAMEPAD_AXIS_LEFTY,
    SDL_GAMEPAD_AXIS_RIGHTX,
    SDL_GAMEPAD_AXIS_RIGHTY,
    SDL_GAMEPAD_AXIS_LEFT_TRIGGER,
    SDL_GAMEPAD_AXIS_RIGHT_TRIGGER,
    SDL_GAMEPAD_AXIS_COUNT
} SDL_GamepadAxis;
typedef struct SDL_GamepadBinding
{
    SDL_GamepadBindingType input_type;
    union
    {
        int button;
        struct
        {
            int axis;
            int axis_min;
            int axis_max;
        } axis;
        struct
        {
            int hat;
            int hat_mask;
        } hat;
    } input;
    SDL_GamepadBindingType output_type;
    union
    {
        SDL_GamepadButton button;
        struct
        {
            SDL_GamepadAxis axis;
            int axis_min;
            int axis_max;
        } axis;
    } output;
} SDL_GamepadBinding;
extern  SDL_JoystickID  SDL_GetGamepadID(SDL_Gamepad *gamepad);
extern  const char *  SDL_GetGamepadName(SDL_Gamepad *gamepad);
extern  const char *  SDL_GetGamepadPath(SDL_Gamepad *gamepad);
extern  SDL_GamepadType  SDL_GetGamepadType(SDL_Gamepad *gamepad);
extern  SDL_GamepadType  SDL_GetRealGamepadType(SDL_Gamepad *gamepad);
extern  int  SDL_GetGamepadPlayerIndex(SDL_Gamepad *gamepad);
extern  bool  SDL_SetGamepadPlayerIndex(SDL_Gamepad *gamepad, int player_index);
extern  Uint16  SDL_GetGamepadVendor(SDL_Gamepad *gamepad);
extern  Uint16  SDL_GetGamepadProduct(SDL_Gamepad *gamepad);
extern  Uint16  SDL_GetGamepadProductVersion(SDL_Gamepad *gamepad);
extern  Uint16  SDL_GetGamepadFirmwareVersion(SDL_Gamepad *gamepad);
extern  const char *  SDL_GetGamepadSerial(SDL_Gamepad *gamepad);
extern  Uint64  SDL_GetGamepadSteamHandle(SDL_Gamepad *gamepad);
extern  SDL_JoystickConnectionState  SDL_GetGamepadConnectionState(SDL_Gamepad *gamepad);
extern  SDL_PowerState  SDL_GetGamepadPowerInfo(SDL_Gamepad *gamepad, int *percent);
extern  bool  SDL_GamepadConnected(SDL_Gamepad *gamepad);
extern  SDL_Joystick *  SDL_GetGamepadJoystick(SDL_Gamepad *gamepad);
extern  void  SDL_SetGamepadEventsEnabled(bool enabled);
extern  bool  SDL_GamepadEventsEnabled(void);
extern  SDL_GamepadBinding **  SDL_GetGamepadBindings(SDL_Gamepad *gamepad, int *count);
extern  void  SDL_UpdateGamepads(void);
extern  SDL_GamepadType  SDL_GetGamepadTypeFromString(const char *str);
extern  const char *  SDL_GetGamepadStringForType(SDL_GamepadType type);
extern  SDL_GamepadAxis  SDL_GetGamepadAxisFromString(const char *str);
extern  const char *  SDL_GetGamepadStringForAxis(SDL_GamepadAxis axis);
extern  bool  SDL_GamepadHasAxis(SDL_Gamepad *gamepad, SDL_GamepadAxis axis);
extern  Sint16  SDL_GetGamepadAxis(SDL_Gamepad *gamepad, SDL_GamepadAxis axis);
extern  SDL_GamepadButton  SDL_GetGamepadButtonFromString(const char *str);
extern  const char *  SDL_GetGamepadStringForButton(SDL_GamepadButton button);
extern  bool  SDL_GamepadHasButton(SDL_Gamepad *gamepad, SDL_GamepadButton button);
extern  bool  SDL_GetGamepadButton(SDL_Gamepad *gamepad, SDL_GamepadButton button);
extern  SDL_GamepadButtonLabel  SDL_GetGamepadButtonLabelForType(SDL_GamepadType type, SDL_GamepadButton button);
extern  SDL_GamepadButtonLabel  SDL_GetGamepadButtonLabel(SDL_Gamepad *gamepad, SDL_GamepadButton button);
extern  int  SDL_GetNumGamepadTouchpads(SDL_Gamepad *gamepad);
extern  int  SDL_GetNumGamepadTouchpadFingers(SDL_Gamepad *gamepad, int touchpad);
extern  bool  SDL_GetGamepadTouchpadFinger(SDL_Gamepad *gamepad, int touchpad, int finger, bool *down, float *x, float *y, float *pressure);
extern  bool  SDL_GamepadHasSensor(SDL_Gamepad *gamepad, SDL_SensorType type);
extern  bool  SDL_SetGamepadSensorEnabled(SDL_Gamepad *gamepad, SDL_SensorType type, bool enabled);
extern  bool  SDL_GamepadSensorEnabled(SDL_Gamepad *gamepad, SDL_SensorType type);
extern  float  SDL_GetGamepadSensorDataRate(SDL_Gamepad *gamepad, SDL_SensorType type);
extern  bool  SDL_GetGamepadSensorData(SDL_Gamepad *gamepad, SDL_SensorType type, float *data, int num_values);
extern  bool  SDL_RumbleGamepad(SDL_Gamepad *gamepad, Uint16 low_frequency_rumble, Uint16 high_frequency_rumble, Uint32 duration_ms);
extern  bool  SDL_RumbleGamepadTriggers(SDL_Gamepad *gamepad, Uint16 left_rumble, Uint16 right_rumble, Uint32 duration_ms);
extern  bool  SDL_SetGamepadLED(SDL_Gamepad *gamepad, Uint8 red, Uint8 green, Uint8 blue);
extern  bool  SDL_SendGamepadEffect(SDL_Gamepad *gamepad, const void *data, int size);
extern  void  SDL_CloseGamepad(SDL_Gamepad *gamepad);
extern  const char *  SDL_GetGamepadAppleSFSymbolsNameForButton(SDL_Gamepad *gamepad, SDL_GamepadButton button);
extern  const char *  SDL_GetGamepadAppleSFSymbolsNameForAxis(SDL_Gamepad *gamepad, SDL_GamepadAxis axis);