packages/SDL3/SDL_gamepad.inc


function SDL_GetGamepadID(gamepad: PSDL_Gamepad): TSDL_JoystickID; cdecl; external libSDL3;
function SDL_GetGamepadName(gamepad: PSDL_Gamepad): pansichar; cdecl; external libSDL3;
function SDL_GetGamepadPath(gamepad: PSDL_Gamepad): pansichar; cdecl; external libSDL3;
function SDL_GetGamepadType(gamepad: PSDL_Gamepad): TSDL_GamepadType; cdecl; external libSDL3;
function SDL_GetRealGamepadType(gamepad: PSDL_Gamepad): TSDL_GamepadType; cdecl; external libSDL3;
function SDL_GetGamepadPlayerIndex(gamepad: PSDL_Gamepad): longint; cdecl; external libSDL3;
function SDL_SetGamepadPlayerIndex(gamepad: PSDL_Gamepad; player_index: longint): Tbool; cdecl; external libSDL3;
function SDL_GetGamepadVendor(gamepad: PSDL_Gamepad): TUint16; cdecl; external libSDL3;
function SDL_GetGamepadProduct(gamepad: PSDL_Gamepad): TUint16; cdecl; external libSDL3;
function SDL_GetGamepadProductVersion(gamepad: PSDL_Gamepad): TUint16; cdecl; external libSDL3;
function SDL_GetGamepadFirmwareVersion(gamepad: PSDL_Gamepad): TUint16; cdecl; external libSDL3;
function SDL_GetGamepadSerial(gamepad: PSDL_Gamepad): pansichar; cdecl; external libSDL3;
function SDL_GetGamepadSteamHandle(gamepad: PSDL_Gamepad): TUint64; cdecl; external libSDL3;
function SDL_GetGamepadConnectionState(gamepad: PSDL_Gamepad): TSDL_JoystickConnectionState; cdecl; external libSDL3;
function SDL_GetGamepadPowerInfo(gamepad: PSDL_Gamepad; percent: Plongint): TSDL_PowerState; cdecl; external libSDL3;
function SDL_GamepadConnected(gamepad: PSDL_Gamepad): Tbool; cdecl; external libSDL3;
function SDL_GetGamepadJoystick(gamepad: PSDL_Gamepad): PSDL_Joystick; cdecl; external libSDL3;
procedure SDL_SetGamepadEventsEnabled(Enabled: Tbool); cdecl; external libSDL3;
function SDL_GamepadEventsEnabled: Tbool; cdecl; external libSDL3;
function SDL_GetGamepadBindings(gamepad: PSDL_Gamepad; Count: Plongint): PPSDL_GamepadBinding; cdecl; external libSDL3;
procedure SDL_UpdateGamepads; cdecl; external libSDL3;
function SDL_GetGamepadTypeFromString(str: pansichar): TSDL_GamepadType; cdecl; external libSDL3;
function SDL_GetGamepadStringForType(_type: TSDL_GamepadType): pansichar; cdecl; external libSDL3;
function SDL_GetGamepadAxisFromString(str: pansichar): TSDL_GamepadAxis; cdecl; external libSDL3;
function SDL_GetGamepadStringForAxis(axis: TSDL_GamepadAxis): pansichar; cdecl; external libSDL3;
function SDL_GamepadHasAxis(gamepad: PSDL_Gamepad; axis: TSDL_GamepadAxis): Tbool; cdecl; external libSDL3;
function SDL_GetGamepadAxis(gamepad: PSDL_Gamepad; axis: TSDL_GamepadAxis): TSint16; cdecl; external libSDL3;
function SDL_GetGamepadButtonFromString(str: pansichar): TSDL_GamepadButton; cdecl; external libSDL3;
function SDL_GetGamepadStringForButton(button: TSDL_GamepadButton): pansichar; cdecl; external libSDL3;
function SDL_GamepadHasButton(gamepad: PSDL_Gamepad; button: TSDL_GamepadButton): Tbool; cdecl; external libSDL3;
function SDL_GetGamepadButton(gamepad: PSDL_Gamepad; button: TSDL_GamepadButton): Tbool; cdecl; external libSDL3;
function SDL_GetGamepadButtonLabelForType(_type: TSDL_GamepadType; button: TSDL_GamepadButton): TSDL_GamepadButtonLabel; cdecl; external libSDL3;
function SDL_GetGamepadButtonLabel(gamepad: PSDL_Gamepad; button: TSDL_GamepadButton): TSDL_GamepadButtonLabel; cdecl; external libSDL3;
function SDL_GetNumGamepadTouchpads(gamepad: PSDL_Gamepad): longint; cdecl; external libSDL3;
function SDL_GetNumGamepadTouchpadFingers(gamepad: PSDL_Gamepad; touchpad: longint): longint; cdecl; external libSDL3;
function SDL_GetGamepadTouchpadFinger(gamepad: PSDL_Gamepad; touchpad: longint; finger: longint; down: PBoolean; x: Psingle;
  y: Psingle; pressure: Psingle): Tbool; cdecl; external libSDL3;
function SDL_GamepadHasSensor(gamepad: PSDL_Gamepad; _type: TSDL_SensorType): Tbool; cdecl; external libSDL3;
function SDL_SetGamepadSensorEnabled(gamepad: PSDL_Gamepad; _type: TSDL_SensorType; Enabled: Tbool): Tbool; cdecl; external libSDL3;
function SDL_GamepadSensorEnabled(gamepad: PSDL_Gamepad; _type: TSDL_SensorType): Tbool; cdecl; external libSDL3;
function SDL_GetGamepadSensorDataRate(gamepad: PSDL_Gamepad; _type: TSDL_SensorType): single; cdecl; external libSDL3;
function SDL_GetGamepadSensorData(gamepad: PSDL_Gamepad; _type: TSDL_SensorType; Data: Psingle; num_values: longint): Tbool; cdecl; external libSDL3;
function SDL_RumbleGamepad(gamepad: PSDL_Gamepad; low_frequency_rumble: TUint16; high_frequency_rumble: TUint16; duration_ms: TUint32): Tbool; cdecl; external libSDL3;
function SDL_RumbleGamepadTriggers(gamepad: PSDL_Gamepad; left_rumble: TUint16; right_rumble: TUint16; duration_ms: TUint32): Tbool; cdecl; external libSDL3;
function SDL_SetGamepadLED(gamepad: PSDL_Gamepad; red: TUint8; green: TUint8; blue: TUint8): Tbool; cdecl; external libSDL3;
function SDL_SendGamepadEffect(gamepad: PSDL_Gamepad; Data: pointer; size: longint): Tbool; cdecl; external libSDL3;
procedure SDL_CloseGamepad(gamepad: PSDL_Gamepad); cdecl; external libSDL3;
function SDL_GetGamepadAppleSFSymbolsNameForButton(gamepad: PSDL_Gamepad; button: TSDL_GamepadButton): pansichar; cdecl; external libSDL3;
function SDL_GetGamepadAppleSFSymbolsNameForAxis(gamepad: PSDL_Gamepad; axis: TSDL_GamepadAxis): pansichar; cdecl; external libSDL3;

{$ENDIF read_interface}


{$IFDEF read_implementation}


{$ENDIF read_implementation}
